Bug 1383110 - Force to fetch Oculus Touch tracking data when it is added; r=kip

MozReview-Commit-ID: 4e8qoV6cDzy